--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+
 .App {
   text-align: center;
+}
+
+.body-container{
+  width: 100%;
 }
 
 .App-logo {
@@ -26,6 +31,13 @@
 
 .App-link {
   color: #61dafb;
+}
+
+p,h2{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 @keyframes App-logo-spin {
