--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,6 +4,11 @@
   100% {color: rgb(129, 179, 220)}
 }
 .navbar-parent{
+  z-index: 1;
+  display: block;
+  height: 64px;
+  background-color: rgba(255, 255, 255, 0.162);
+  position: fixed;
   width: 100%;
 }
 .navbar{
