--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -9,7 +9,7 @@ body, html{
 #cart-input{
     z-index:4;
     /* position: relative; */
-    transform:translateY(-350px);
+    transform:translateX(-175px);
     height: 350px;
     width: 350px;
     border: none;
@@ -20,6 +20,24 @@ body, html{
     resize:none;
     cursor:default;
 }
-img{
+#cartimagediv{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+#cartimg{
     z-index:3;
+    transform: translateX(175px);
+}
+@media screen and (max-width: 700px) {
+    #cartimg{
+        height: 180px;
+        transform:translateX(90px);
+    }
+    #cart-input{
+        transform:translateX(-90px);
+        height: 180px;
+        width: 180px;
+    }
 }
